k8s/08-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 2   # Django 앱 Pod를 2개 실행 (고가용성 확보)
  selector:
    matchLabels:
      app: django-web
  template:
    metadata:
      labels:
        app: django-web   # Pod 라벨
    spec:
      volumes:
        - name: static-files
          emptyDir: {}
        - name: nginx-config-volume
          configMap:
            name: django-nginx-config
      
      containers:
        - name: django-web-container
          image: mudd0/django_k8s_project:v1.45
          imagePullPolicy: Always
          
          command: ["/bin/sh", "-c"]
          args:
            - "python manage.py collectstatic --noinput && gunicorn config.wsgi:application --bind 0.0.0.0:8000"

          # 환경변수 주입
          volumeMounts:
            - name: static-files
              mountPath: /app/staticfiles # (여기에 CSS를 모음)
          
        # --- (!!!) 컨테이너 2 (신규): Nginx (사이드카) ---
        - name: nginx-sidecar
          image: nginx:1.25-alpine # 경량 Nginx 이미지 사용
          ports:
            # (!!!) Nginx가 Pod의 '정문'인 80번 포트를 담당
            - containerPort: 80
          volumeMounts:
            # 1. (읽기 전용) CSS 공유 공간을 마운트
            - name: static-files
              mountPath: /app/staticfiles # (여기서 CSS를 읽어감)
              readOnly: true
            # 2. (읽기 전용) Nginx 설정 파일을 마운트
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
              readOnly: true
