k8s/09-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django-web   # 08-web-deployment.yaml에서 지정한 라벨과 일치해야 함
  ports:
    - protocol: TCP
      port: 8000       # 클러스터 내부에서 서비스가 노출되는 포트
      targetPort: 8000 # Django 컨테이너(Gunicorn)가 사용하는 포트
      nodePort: 30080  # 외부에서 접속할 때 사용할 포트 (30000~32767 범위)
